syntax = "proto3";

package bilibili.playershared;

message ViewInfo {

    map<string, Dialog> dialog_map = 1;

    PromptBar prompt_bar = 2;

    repeated ComprehensiveToast toasts = 3;
}

message Dialog {

    GuideStyle style_type = 1;

    BackgroundInfo background_info = 2;

    TextInfo title = 3;

    TextInfo subtitle = 4;

    ImageInfo image = 5;

    repeated ButtonInfo button = 6;

    ButtonInfo bottom_desc = 7;

    Report report = 8;

    int32 count_down_sec = 9;

    TextInfo right_bottom_desc = 10;

    repeated BottomDisplay bottom_display = 11;

    ExtData ext_data = 12;

    LimitActionType limit_action_type = 13;

    int32 is_hide_more_btn = 14;
}

enum GuideStyle {

    STYLE_UNKNOWN = 0;

    HORIZONTAL_IMAGE = 1;

    VERTICAL_TEXT = 2;

    SIMPLE_TEXT = 3;

    CHARGING_TEXT = 4;
}

message BackgroundInfo {

    string drawable_color = 1;

    string drawable_bitmap_url = 2;

    int32 effects = 3;
}

message TextInfo {

    string text = 1;

    string text_color = 2;

    string text_color_night = 3;
}

message ImageInfo {

    string url = 1;
}

message ButtonInfo {

    string text = 1;

    string text_color = 2;

    string text_color_night = 3;

    string bg_color = 4;

    string bg_color_night = 5;

    string link = 6;

    ButtonAction action_type = 7;

    BadgeInfo badge_info = 8;

    Report report = 9;

    string left_strikethrough_text = 10;

    TextInfo simple_text_info = 11;

    string simple_bg_color = 12;

    string simple_bg_color_night = 13;

    GradientColor bg_gradient_color = 14;

    map<string, string> order_report_params = 15;

    TaskParam task_param = 16;

    string frame_color = 17;

    string icon = 18;
}

enum ButtonAction {

    BUTTON_UNKNOWN = 0;

    PAY = 1;

    VIP = 2;

    PACK = 3;

    LINK = 4;

    COUPON = 5;

    DEMAND = 6;

    DEMAND_PACK = 7;

    FOLLOW = 8;

    APPOINTMENT = 9;

    VIP_FREE = 10;

    TASK = 11;

    CHARGINGPLUS = 12;

    BP = 13;

    PRE_SELL = 14;

    LOGIN = 15;
}

message BadgeInfo {

    string text = 1;

    string bg_color = 2;

    string bg_color_night = 3;

    string text_color = 4;

    GradientColor bg_gradient_color = 5;

    string img = 6;
}

message GradientColor {

    string start_color = 1;

    string end_color = 2;
}

message Report {

    string show_event_id = 1;

    string click_event_id = 2;

    string extends = 3;
}

message TaskParam {

    string task_type = 1;

    int64 activity_id = 2;

    int64 tips_id = 3;
}

message BottomDisplay {

    TextInfo title = 1;

    string icon = 2;
}

message ExtData {

    ExtDataType type = 1;

    oneof data {
        PlayListInfo play_list_info = 2;
    }
}

enum ExtDataType {

    EXT_DATA_TYPE_UNKNOWN = 0;

    PLAY_LIST = 1;
}

message PlayListInfo {

    repeated PlayList play_list = 2;
}

message PlayList {

    int64 season_id = 1;

    string title = 2;

    string cover = 3;

    string link = 4;

    BadgeInfo badge_info = 5;
}

enum LimitActionType {

    LAT_UNKNOWN = 0;

    SHOW_LIMIT_DIALOG = 1;

    SKIP_CURRENT_EP = 2;
}

/** 视频下方广告 Banner */
message PromptBar {

    TextInfo title = 1;

    TextInfo subtitle = 2;

    string sub_title_icon = 3;

    string bg_image = 4;

    GradientColor bg_gradient_color = 5;

    repeated ButtonInfo button = 6;

    Report report = 7;

    string full_screen_ip_icon = 8;

    GradientColor full_screen_bg_gradient_color = 9;

    PromptBarType prompt_bar_type = 10;

    PromptBarStyle prompt_bar_style = 11;

    repeated BenefitInfo benefit_infos = 12;

    int64 end_time = 13;
}

enum PromptBarType {

    PROMPT_BAR_TYPE_UNKNOWN = 0;

    OPEN_PROMPT_BAR = 1;
}

enum PromptBarStyle {

    PROMPT_BAR_STYLE_UNKNOWN = 0;

    TEXT = 1;

    CURING_BENEFITS = 2;

    CARD_OPENING_GIFT = 3;

    COUNTDOWN = 4;
}

message BenefitInfo {

    string title = 1;

    string icon = 2;
}

message ComprehensiveToast {

    int32 type = 1;

    ButtonInfo button = 2;

    int32 show_style_type = 3;

    string icon = 4;

    TextInfo toast_text = 5;

    Report report = 6;

    map<string, string> order_report_params = 7;
}